--- a/backend/app/views/spree/admin/payments/source_forms/_storecredit.html.erb
+++ b/backend/app/views/spree/admin/payments/source_forms/_storecredit.html.erb
@@ -5,7 +5,7 @@
     <% else %>
       <div>
         <div class='field'>
-          <%= select_tag "payment[store_credit_id]",
+          <%= select_tag "payment[source_attributes][existing_credit_id]",
             options_for_select(@store_credits.map { |sc| ["#{Spree::Money.new(sc.amount_remaining).to_s} (#{sc.category_name})", sc.id] }, nil),
             { :class => 'select2 fullwidth', include_blank: true, placeholder: Spree.t('store_credit.select_one_store_credit') } %>
       </div>
